objects/Referral_Country__mdt.object
<CustomObject>
    <description>Used to map conflicting country values across divisions</description>
    <fields>
        <fullName>IHS_ISO_Code__c</fullName>
        <description>The 2-digit ISO code of the country according to IHS Markit</description>
        <label>IHS ISO Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHS_Name__c</fullName>
        <description>The name of the country according to IHS Markit</description>
        <label>IHS Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indices_ISO_Code__c</fullName>
        <description>The 2-digit ISO code of the country according to Indices</description>
        <label>Indices ISO Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indices_Name__c</fullName>
        <description>The name of the country according to Indices</description>
        <label>Indices Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI_ISO_Code__c</fullName>
        <description>The 2-digit ISO code of the country according to MI</description>
        <label>MI ISO Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI_Name__c</fullName>
        <description>The name of the country according to Indices</description>
        <label>MI Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platts_ISO_Code__c</fullName>
        <description>The 2-digit ISO code of the country according to Platts</description>
        <label>Platts ISO Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platts_Name__c</fullName>
        <description>The name of the country according to Platts</description>
        <label>Platts Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratings_ISO_Code__c</fullName>
        <description>The 2-digit ISO code of the country according to Ratings</description>
        <label>Ratings ISO Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratings_Name__c</fullName>
        <description>The name of the country according to Ratings</description>
        <label>Ratings Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Region__c</fullName>
        <description>Looks up to a related region where one is specified</description>
        <label>Referral Region</label>
        <referenceTo>Referral_Region__mdt</referenceTo>
        <relationshipLabel>Referral Countries</relationshipLabel>
        <relationshipName>Referral_Countries</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Referral Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Indices_Name__c</columns>
        <columns>MI_Name__c</columns>
        <columns>Platts_Name__c</columns>
        <columns>Ratings_Name__c</columns>
        <columns>IHS_Name__c</columns>
        <columns>Referral_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Referral Countries</pluralLabel>
</CustomObject>